crates/math-core/tests/snapshots/error_test__right_with_non_delimiter.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\left( 1 \\right x"
---
Error: There must be a parenthesis after "\right", but not found.
   ╭─[ <input>:1:17 ]
   │
 1 │ \left( 1 \right x
   │                 ┬  
   │                 ╰── expected a delimiter here
───╯
